<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Nice Alarm</string>
    <string name="service_label">Nice Alarm Service</string>
    
    <string name="set_alarm">Set Alarm</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="no_alarms">No Alarms</string>
    <string name="default_label">Alarm</string>
	<string name="loading">Loading…</string>
	<string name="enable_alarm">Enable Alarm</string>
	<string name="disable_alarm">Disable Alarm</string>
	<string name="delete_alarm">Delete Alarm</string>
	<string name="edit_alarm">Edit Alarm</string>
	<string name="delete">Delete</string>
	
	<string name="time">Alarm Time</string>
	<string name="alarm_repeat">Alarm Repeat</string>
	<string name="alert">Alert Tone</string>
	<string name="silent_alarm_summary">Silent</string>
	<string name="alarm_vibrate">Vibrate</string>
	<string name="label">Label</string>
	
	<string name="nice_alarm_title">Nice Alarm</string>
	<string name="nice_enable">Enable Nice Alarm</string>
	<string name="nice_alert">Nice Alarm Tone</string>
	<string name="nice_leadin">Nice Alarm Lead-In Time</string>
	
	<string name="alert_title">Nice Alarm</string>
	<string name="alert_title_silenced">Nice Alarm Silenced</string>
	<string name="alert_title_snooze">Nice Alarm Snoozing</string>
	
	<!-- Alarm confirmation toast: Describes how long from now until
         alarm fires -->
    <string-array name="alarm_set">
        <item>Alarm set for less than 1 minute from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g>, <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g>, and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
    </string-array>

    <!-- Alarm confirmation toast: singular day -->
    <string name="day">"1 day"</string>

    <!-- Alarm confirmation toast: plural days -->
    <string name="days">"<xliff:g id="days">%s</xliff:g> days"</string>

    <!-- Alarm confirmation toast: singular hour -->
    <string name="hour">1 hour</string>

    <!-- Alarm confirmation toast: plural hours -->
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string>

    <!-- Alarm confirmation toast: singular minute  -->
    <string name="minute">"1 minute"</string>

    <!-- Alarm confirmation toast: plural minutes  -->
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>

    <!-- Repeat options that appear under an alarm on main Alarm Clock
         screen to identify repetition schedule: special case for when
         the alarm is set to repeat every day -->
    <string name="every_day">Every day</string>

    <!-- Repeat options that appear under an alarm on main Alarm Clock
         screen to identify repetition schedule: special case for when
         the alarm is set to never repeat -->
    <string name="never">Never</string>

    <!-- Repeat options that appear under an alarm on main Alarm Clock
         screen to identify repetition schedule: concatenate days with
         this character, i.e. "Mon, Tue, Wed" -->
    <string name="day_concat">", "</string>
    
    <!-- Delete alarm confirmation dialog message. -->
    <string name="delete_alarm_confirm">Delete this alarm?</string>
	
</resources>