<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/set_alarm" >

    <PreferenceCategory android:title="@string/set_alarm" >
        <SwitchPreference
            android:key="key_alarm_enabled"
            android:persistent="false"
            android:title="@string/enable_alarm" />

        <Preference
            android:key="key_time"
            android:persistent="false"
            android:title="@string/time" />

        <com.schneenet.android.nicealarm.ui.views.RepeatPreference
            android:key="key_setRepeat"
            android:persistent="false"
            android:title="@string/alarm_repeat" />

        <com.schneenet.android.nicealarm.ui.views.AlarmPreference
            android:key="key_alarm"
            android:persistent="false"
            android:ringtoneType="alarm"
            android:showDefault="false"
            android:showSilent="true"
            android:title="@string/alert" />

        <CheckBoxPreference
            android:key="key_vibrate"
            android:persistent="false"
            android:title="@string/alarm_vibrate" />

        <EditTextPreference
            android:key="key_label"
            android:persistent="false"
            android:title="@string/label" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/nice_alarm_title" >
        <CheckBoxPreference
            android:key="key_nice_enabled"
            android:persistent="false"
            android:title="@string/nice_enable" />

        <com.schneenet.android.nicealarm.ui.views.AlarmPreference
            android:key="key_nice_alert"
            android:dependency="key_nice_enabled"
            android:persistent="false"
            android:ringtoneType="alarm"
            android:showDefault="false"
            android:showSilent="true"
            android:title="@string/nice_alert" />

        <Preference
            android:key="key_nice_leadin"
            android:dependency="key_nice_enabled"
            android:title="@string/nice_leadin" />
    </PreferenceCategory>

</PreferenceScreen>