<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/titleContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@android:id/title"
            style="@style/TitleTheme"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:text="@string/app_name" />

        <ImageButton
            android:id="@+id/alarm_list_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_alarm"
            android:src="@drawable/ic_add" />
    </LinearLayout>

    <View
        android:id="@+id/titleDivider"
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_below="@+id/titleContainer"
        android:background="@color/accent_color" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleDivider" />

    <TextView
        android:id="@android:id/empty"
        style="@style/EmptyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleDivider"
        android:text="@string/no_alarms" />

</RelativeLayout>